# compton-conf

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README  README.md  compton-conf.cpp  compton-conf.desktop  compton-conf.desktop.in  compton-conf.kdev4  compton-conf.ts  compton-conf_ca.ts  compton-conf_cs.ts  compton-conf_da.ts  compton-conf_de.ts  compton-conf_el.ts  compton-conf_es.ts  compton-conf_fr.ts  compton-conf_hu.ts  compton-conf_id.ts  compton-conf_it.ts  compton-conf_ja.ts  compton-conf_lt.ts  compton-conf_lv.ts  compton-conf_nl.ts  compton-conf_pl.ts  compton-conf_pt.ts  compton-conf_ru.ts  compton-conf_tr.ts  compton-conf_uk.ts  compton-conf_zh_CN.ts  compton.conf.example  maindialog.cpp  maindialog.h  maindialog.ui
.github/: ISSUE_TEMPLATE.md
autostart/: lxqt-config-randr.desktop.in  lxqt-screenlocker.desktop.in
autostart/translations/: lxqt-compton_pl.desktop
cmake/: LXQtTranslateDesktop.cmake  LXQtTranslateTs.cmake
translations/: ccompton-conf_hr.ts  compton-conf.ts  compton-conf_be.ts  compton-conf_ca.ts  compton-conf_cs.ts  compton-conf_de.desktop  compton-conf_de.ts  compton-conf_el.ts  compton-conf_en_GB.ts  compton-conf_es.ts  compton-conf_eu.ts  compton-conf_fil.ts  compton-conf_fr.ts  compton-conf_gl.desktop  compton-conf_gl.ts  compton-conf_he.ts  compton-conf_hi.ts  compton-conf_hr.ts  compton-conf_hu.desktop  compton-conf_hu.ts  compton-conf_id.ts  compton-conf_it.ts  compton-conf_ja.desktop  compton-conf_ja.ts  compton-conf_ko.ts  compton-conf_lv.ts  compton-conf_nb_NO.ts  compton-conf_nl.ts  compton-conf_pl.desktop  compton-conf_pt.ts  compton-conf_pt_BR.ts  compton-conf_ru.desktop  compton-conf_ru.ts  compton-conf_ru_RU.desktop  compton-conf_ru_RU.ts  compton-conf_sk_SK.ts  compton-conf_tr.ts  compton-conf_uk.ts  compton-conf_vi.ts  compton-conf_zh_CN.ts  (+2 more)
